---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 17. 10. 2023
  Major Features:
    - Initial release.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 24. 10. 2023
  Major Features:
    - Much improved burner stage
    - Oil processing
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 25. 10. 2023
  Bugfixes:
    - Fixed that burner drills were innaccessible from one side
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 25. 10. 2023
  Changes:
    - Slightly buffed coal coke's top speed value
    - Fuel top speed now boosts productivity in burner machines
    - Fuel acceleration no longer grants any productivity in burner machines
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 25. 10. 2023
  Changes:
    - Improved coal coke graphics