@@ -288,3 +288,12 @@ allowProductivity("space-science-pack")
 allowProductivity("sand")
 allowProductivity("glass-plate")
 allowProductivity("burner-science-pack")
+allowProductivity("charcoal")
+allowProductivity("coal-coke")
+allowProductivity("alt-electronic-circuit-plastic")
+allowProductivity("alt-electronic-circuit-wood")
+allowProductivity("water-condensation")
+allowProductivity("water-electrolysis")
+allowProductivity("chlorine")
+allowProductivity("hydrochloric-acid")
+allowProductivity("petrogas-from-hydrogen-coal")
